--- a/quiz.html
+++ b/quiz.html
@@ -119,7 +119,7 @@
             California<br />
             USA
         </address>
-        <p id="description">This Project was Created by<a href="https://github.com/Ricardo-Vargas-Gonzalez/-new--Responsive-web-design--FCCP-.git" target="blank"> Ricardo Alonso Vargas González</a></p>
+        <p id="description">This Project was Created by<a href="https://github.com/Ricardo-Vargas-Gonzalez/accesibility-quiz" target="blank"> Ricardo Alonso Vargas González</a></p>
         <p> january 2023</p>
     </footer>
 </body>
